# gsettings_cleaner

./: Cargo.toml  Cranky.toml  README.md  main.rs
